added collections to models
