# routes/user.js
@@ -4,8 +4,8 @@ const router = express.Router();
 const userController = require('../controllers/user');
 
 router.get('/', userController.getAll);
-router.get('/:username', userController.getUser);
 router.post('/', userController.create);
+router.get('/:username', userController.getUser);
 router.put('/:username', userController.updateUser);
 router.delete('/:username', userController.deleteUser);
 
