# swagger.json
@@ -12,11 +12,11 @@
       "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
     }
   },
-  "host": "cse341-p2.onrender.com/api-docs",
+  "host": "localhost:8080",
   "basePath": "/",
   "tags": [
     {
-      "name": "flower",
+      "name": "flowers",
       "description": "Operations about flowers"
     },
     {
@@ -30,10 +30,56 @@
   ],
   "schemes": ["http", "https"],
   "paths": {
-    "/flower/{flowerName}": {
+    "/flowers": {
       "get": {
         "tags": ["flowers"],
-        "summary": "Finds Flower by name",
+        "summary": "Get all flowers",
+        "operationId": "getAllFlowers",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "Array",
+              "$ref": "#/definitions/Flower"
+            }
+          },
+          "500": {
+            "description": "Error occurred"
+          }
+        }
+      },
+      "post": {
+        "tags": ["flowers"],
+        "summary": "Create new flower",
+        "description": "This is for when flower is added to the database",
+        "operationId": "createFlower",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created flower object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Flower"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "A User object",
+            "schema": {
+              "$ref": "#/definitions/Flower"
+            }
+          }
+        }
+      }
+    },
+    "/flowers/{flowerName}": {
+      "get": {
+        "tags": ["flowers"],
+        "summary": "Finds Flowers by name",
         "description": "Each flower has a unique name, this will basically find a single flower by an exact name almost like an id",
         "operationId": "findFlowerByName",
         "produces": ["application/json"],
@@ -67,20 +113,25 @@
             "description": "Invalid flower name value"
           }
         }
-      }
-    },
-    "/flower/create": {
-      "post": {
+      },
+      "put": {
         "tags": ["flowers"],
-        "summary": "Create Flower",
-        "description":"This is for when a new flower is to be added.",
-        "operationId": "createFlower",
+        "summary": "Updated flower",
+        "description": "Updates the flower in the database.",
+        "operationId": "updateFlower",
         "produces": ["application/json"],
         "parameters": [
           {
+            "name": "flowerName",
+            "in": "path",
+            "description": "name that need to be updated",
+            "required": true,
+            "type": "string"
+          },
+          {
             "in": "body",
             "name": "body",
-            "description": "Create user object",
+            "description": "Updated flower object",
             "required": true,
             "schema": {
               "$ref": "#/definitions/Flower"
@@ -88,29 +139,64 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "successfully created user",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "type": "integer",
-                  "format": "int64"
-                },
-                "name": {
-                  "type": "string",
-                  "example": "UserJones"
-                }
-              }
-            }
+          "204": {
+            "description": "Successfully modified flower"
           },
           "400": {
-            "description": "Invalid user name value"
+            "description": "Invalid flower supplied"
+          },
+          "404": {
+            "description": "Flower not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["flowers"],
+        "summary": "Delete flower",
+        "description": "Removes the flower from the database.",
+        "operationId": "deleteFlower",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "flowerName",
+            "in": "path",
+            "description": "The name that needs to be deleted",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successfully deleted flower"
+          },
+          "400": {
+            "description": "Invalid flower name supplied"
+          },
+          "404": {
+            "description": "Flower not found"
           }
         }
       }
     },
-    "/user/create": {
+    "/user": {
+      "get": {
+        "tags": ["user"],
+        "summary": "Get all users",
+        "operationId": "getAllUsers",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "Array",
+              "$ref": "#/definitions/User"
+            }
+          },
+          "500": {
+            "description": "Error occurred"
+          }
+        }
+      },
       "post": {
         "tags": ["user"],
         "summary": "Create user",
@@ -121,7 +207,7 @@
           {
             "in": "body",
             "name": "body",
-            "description": "Create user object",
+            "description": "Created user object",
             "required": true,
             "schema": {
               "$ref": "#/definitions/Credentials"
@@ -138,9 +224,9 @@
                   "type": "integer",
                   "format": "int64"
                 },
-                "username": {
+                "name": {
                   "type": "string",
-                  "example": "UserJones"
+                  "example": "Rosey"
                 }
               }
             }
@@ -222,7 +308,7 @@
           {
             "name": "username",
             "in": "path",
-            "description": "The username that needs to be fetched.",
+            "description": "The name that needs to be fetched.",
             "required": true,
             "type": "string"
           }
@@ -244,7 +330,7 @@
       },
       "put": {
         "tags": ["user"],
-        "summary": "Update user",
+        "summary": "Updated user",
         "description": "This can only be done by the logged in user.",
         "operationId": "updateUser",
         "produces": ["application/json"],
@@ -252,7 +338,7 @@
           {
             "name": "username",
             "in": "path",
-            "description": "username that needs to be updated",
+            "description": "name that need to be updated",
             "required": true,
             "type": "string"
           },
@@ -305,52 +391,6 @@
           }
         }
       }
-    },
-    "/user": {
-      "get": {
-        "tags": ["user"],
-        "summary": "Get all users",
-        "operationId": "getAllUsers",
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "type": "Array",
-              "$ref": "#/definitions/User"
-            }
-          },
-          "500": {
-            "description": "Error occurred"
-          }
-        }
-      },
-      "post": {
-        "tags": ["user"],
-        "summary": "Create user",
-        "description": "This is for when a user creates an account",
-        "operationId": "createUser",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Created user object",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Credentials"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "A User object",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          }
-        }
-      }
     }
   },
   "securityDefinitions": {
@@ -389,92 +429,23 @@
     },
     "Flower": {
       "type": "object",
-      "required": [
-        "id", "name", "commonName", "botanicalName", "botanicalGenus", "description", "colorRange"
-      ],
+      "required": ["flowerName"],
       "properties": {
         "id": {
           "type": "integer",
           "format": "int64"
         },
-        "name": {
+        "flowerName": {
           "type": "string",
-          "example": "rose"
-        },
-        "commonName": {
-          "type": "string"
-        },
-        "botanicalName": {
-          "type": "string"
+          "example": "Rose"
         },
         "botanicalFamily": {
-          "type": "string"
+          "type": "string",
+          "example": "Rosaceae"
         },
         "botanicalGenus": {
-          "type": "string"
-        },
-        "availability": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "where": {
-                "type": "string"
-              },
-              "when": {
-                "type": "string"
-              }
-            }
-          }
-        },
-        "vaseLife": {
-          "type": "string"
-        },
-        "description": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "notes": {
-                "type": "string"
-              },
-              "stemLength": {
-                "type": "string"
-              }
-            }
-          }
-        },
-        "colorRange": {
-          "type": "string"
-        },
-        "florist": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "conditioning": {
-                "type": "string"
-              },
-              "storage": {
-                "type": "string"
-              },
-              "display": {
-                "type": "string"
-              },
-              "stemType": {
-                "type": "string"
-              }
-            }
-          }
-        },
-        "homeCare": {
-          "type": "string"
-        },
-        "tags": {
-          "type": "array",
-          "items": {
-            "$ref": "#/schemas/Tag"
-          }
+          "type": "string",
+          "example": "Rosa"
         }
       }
     },
